un-broke the navbar 'jump' that I had already fixed and then broke again. Also resized header to make it more mobile-friendly

--- a/web/CSS/styles.css
+++ b/web/CSS/styles.css
@@ -2,6 +2,10 @@ body {
   padding: 10px;
 }
 
+.nav-wrapper {
+  min-height:57px;
+}
+
 .albumArtwork {
     transition: transform .2s;
     margin: 0 auto;
